@@ -28,7 +28,7 @@ function screen_resources($resource = null) {
 		SCREEN_RESOURCE_CLOCK => _('Clock'),
 		SCREEN_RESOURCE_DATA_OVERVIEW => _('Data overview'),
 		SCREEN_RESOURCE_GRAPH => _('Graph'),
-		SCREEN_RESOURCE_ACTIONS => _('History of actions'),
+		SCREEN_RESOURCE_ACTIONS => _('Action log'),
 		SCREEN_RESOURCE_EVENTS => _('History of events'),
 		SCREEN_RESOURCE_HOSTS_INFO => _('Hosts info'),
 		SCREEN_RESOURCE_MAP => _('Map'),
