@@ -77,9 +77,6 @@ $auditTable->setHeader(array(
 
 foreach ($this->data['alerts'] as $alert) {
 	$mediatype = array_pop($alert['mediatypes']);
-	if ($mediatype['mediatypeid'] == 0) {
-		$mediatype = array('description' => '');
-	}
 
 	if ($alert['status'] == ALERT_STATUS_SENT) {
 		$status = ($alert['alerttype'] == ALERT_TYPE_MESSAGE)
@@ -130,7 +127,7 @@ foreach ($this->data['alerts'] as $alert) {
 		get_node_name_by_elid($alert['alertid']),
 		new CCol(zbx_date2str(_('d M Y H:i:s'), $alert['clock']), 'top'),
 		new CCol($this->data['actions'][$alert['actionid']]['name'], 'top'),
-		new CCol($mediatype['description'], 'top'),
+		new CCol(($mediatype) ? $mediatype['description'] : '-', 'top'),
 		new CCol($recipient, 'top'),
 		new CCol($message, 'wraptext top'),
 		new CCol($status, 'top'),
